@@ -40,14 +40,15 @@
  * 
  * By default, #GBufferedInputStream's buffer size is set at 4 kilobytes.
  * 
- * To create a buffered input stream, use g_buffered_input_stream_new(), or 
- * g_buffered_input_stream_new_sized() to specify the buffer's size at construction.
+ * To create a buffered input stream, use g_buffered_input_stream_new(), 
+ * or g_buffered_input_stream_new_sized() to specify the buffer's size at 
+ * construction.
  * 
  * To get the size of a buffer within a buffered input stream, use 
  * g_buffered_input_stream_get_buffer_size(). To change the size of a 
- * buffered input stream's buffer, use g_buffered_input_stream_set_buffer_size(). 
- * Note: the buffer's size cannot be reduced below the size of the data within the
- * buffer.
+ * buffered input stream's buffer, use
+ * g_buffered_input_stream_set_buffer_size(). Note that the buffer's size 
+ * cannot be reduced below the size of the data within the buffer.
  *
  **/
 
@@ -207,6 +208,9 @@ g_buffered_input_stream_set_buffer_size (GBufferedInputStream  *stream,
 
   priv = stream->priv;
 
+  if (priv->len == size)
+    return;
+
   if (priv->buffer)
     {
       in_buffer = priv->end - priv->pos;
@@ -229,6 +233,8 @@ g_buffered_input_stream_set_buffer_size (GBufferedInputStream  *stream,
       priv->end = 0;
       priv->buffer = g_malloc (size);
     }
+
+  g_object_notify (G_OBJECT (stream), "buffer-size");
 }
 
 static void
